--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ body {
 
 .search-form {
   text-align: left;
+  font-size: 0px;
   padding-top: 56px;
   padding-left: 54px;
   padding-right: 54px;
@@ -365,7 +366,7 @@ body {
   padding: 0;
   margin: 0;
   padding-left: 14px;
-  width: 292px;
+  width: 296px;
   height: 38px;
   padding-right: 38px;
 	background: rgb(242, 242, 242);
@@ -380,63 +381,10 @@ body {
 .search-first-row input:focus {
 	background: rgb(255, 255, 255);
   border: 2px solid rgb(235, 235, 235);
-}
-
-.search-second-row input {
-  padding: 0;
-  margin: 0;
-  padding-left: 14px;
+  height: 34px;
   width: 292px;
-  height: 38px;
-  padding-right: 38px;
-	background: rgb(242, 242, 242);
-  box-shadow: none;
-  border: none;
 }
 
-.search-second-row input:hover {
-	background: rgb(235, 235, 235);
-}
-
-.search-second-row input:focus {
-  background: rgb(255, 255, 255);
-  border: 2px solid rgb(235, 235, 235);
-}
-
-.search-third-row input {
-  padding: 0;
-  margin: 0;
-  padding-left: 50px;
-  padding-right: 40px;
-	width: 24px;
-  height: 38px;
-	background: rgb(242, 242, 242);
-  box-shadow: none;
-  border: none;
-}
-
-.search-fourth-row input {
-  padding: 0;
-  margin: 0;
-  padding-left: 50px;
-  padding-right: 40px;
-	width: 24px;
-  height: 38px;
-	background: rgb(242, 242, 242);
-  box-shadow: none;
-  border: none;
-}
-
-.search-first-row label {
-  padding-right: 19px;
-  position: relative;
-  font-size: 14px;
-  line-height: 26px;
-  color: rgb(0, 0, 0);
-  font-weight: bold;
-  text-transform: uppercase;
-  font-family: "PT Sans", "Arial", sans-serif;
-}
 
 .calendar {
   position: absolute;
@@ -495,6 +443,147 @@ body {
   background-position: -51px -10px;
 }
 
+.search-second-row input {
+  padding: 0;
+  margin: 0;
+  padding-left: 14px;
+  width: 296px;
+  height: 38px;
+  padding-right: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-second-row input:hover {
+	background: rgb(235, 235, 235);
+}
+
+.search-second-row input:focus {
+  background: rgb(255, 255, 255);
+  border: 2px solid rgb(235, 235, 235);
+  height: 34px;
+  width: 292px;
+}
+
+.search-third-row input {
+  padding: 0;
+  margin: 0;
+  padding-left: 55px;
+  padding-right: 40px;
+	width: 25px;
+  height: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-third-row .plus-button {
+  position: absolute;
+  display: inline-block;
+  right: 285px;
+  width: 39px;
+  height: 38px;
+  border: 0;
+  font-size: 0;
+  text-decoration: none;
+  background-color: transparent;
+  vertical-align: top;
+  cursor: pointer;
+}
+
+.search-fourth-row .plus-button {
+  position: absolute;
+  display: inline-block;
+  right: 56px;
+  width: 39px;
+  height: 38px;
+  border: 0;
+  font-size: 0;
+  text-decoration: none;
+  background-color: transparent;
+  vertical-align: top;
+  cursor: pointer;
+}
+
+.minus-button {
+  position: absolute;
+  display: inline-block;
+  width: 39px;
+  height: 38px;
+  border: 0;
+  font-size: 0;
+  text-decoration: none;
+  background-color: transparent;
+  vertical-align: top;
+  cursor: pointer;
+}
+
+.minus-button::before {
+  content: "";
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-image: url(../img/sprite.png);
+  width: 12px;
+  height: 3px;
+  background-position: -920px -10px;
+  background-repeat: no-repeat;
+}
+
+.minus-button:hover::before {
+  background-position: -856px -10px;
+  background-repeat: no-repeat;
+}
+
+.minus-button:focus::before {
+  background-position: -888px -10px;
+  background-repeat: no-repeat;
+}
+
+.plus-button::before {
+  content: "";
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-image: url(../img/sprite.png);
+  width: 11px;
+  height: 11px;
+  background-position: -1014px -10px;
+  background-repeat: no-repeat;
+}
+
+.plus-button:hover::before {
+  background-position: -952px -10px;
+  background-repeat: no-repeat;
+}
+
+.plus-button:focus::before {
+  background-position: -983px -10px;
+  background-repeat: no-repeat;
+}
+
+.search-fourth-row input {
+  padding: 0;
+  margin: 0;
+  padding-left: 55px;
+  padding-right: 40px;
+	width: 25px;
+  height: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-first-row label {
+  padding-right: 19px;
+  position: relative;
+  font-size: 14px;
+  line-height: 26px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "PT Sans", "Arial", sans-serif;
+}
+
 .search-second-row label {
   position: relative;
   padding-right: 16px;
@@ -517,28 +606,6 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
-.search-third-row label::before {
-  content: "";
-  width: 21px;
-  height: 21px;
-  background: rgb(242, 242, 242) url(../img/minus.png) center no-repeat;
-  position: absolute;
-  right: -35px;
-  top: 0.5px;
-  cursor: pointer;
-}
-
-.search-third-row label::after {
-  content: "";
-  width: 21px;
-  height: 21px;
-  background: rgb(242, 242, 242) url(../img/plus.png) center no-repeat;
-  position: absolute;
-  right: -110px;
-  top: 0.5px;
-  cursor: pointer;
-}
-
 .search-fourth-row label {
   padding-right: 20px;
   padding-left: 48px;
@@ -550,28 +617,6 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
-}
-
-.search-fourth-row label::before {
-  content: "";
-  width: 21px;
-  height: 21px;
-  background: rgb(242, 242, 242) url(../img/minus.png) center no-repeat;
-  position: absolute;
-  right: -35px;
-  top: 0.5px;
-  cursor: pointer;
-}
-
-.search-fourth-row label::after {
-  content: "";
-  width: 21px;
-  height: 21px;
-  background: rgb(242, 242, 242) url(../img/plus.png) center no-repeat;
-  position: absolute;
-  right: -110px;
-  top: 0.5px;
-  cursor: pointer;
 }
 
 .search-form-button input {
@@ -608,12 +653,16 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
-::-webkit-input-placeholderr {
-  color: rgb(0, 0, 0);
+input::-moz-placeholder {
+  color: black;
 }
 
-::-moz-placeholder {
-  color: rgb(0, 0, 0);
+input::-webkit-input-placeholder {
+    color: black;
+}
+
+input:-ms-input-placeholder {
+    color: black;
 }
 
 /* Начинается каталог*/
