--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,8 @@ body {
 }
 
 .main-navigation {
-    margin-left: 73px;
-    margin-right: 73px;
-    min-height: 56px;
+    margin-left: 72px;
+    margin-right: 72px;
 }
 
 .main-navigation ul {
@@ -67,7 +66,8 @@ body {
 
 .navigation-element {
     min-width: 240px;
-    padding-top: 11px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     list-style: none;
 }
 
@@ -88,7 +88,7 @@ body {
   height: 70px;
   left: 50%;
   top: 0px;
-  margin-left: -64px;
+  margin-left: -69px;
 }
 
 /* Индексная */
@@ -96,14 +96,14 @@ body {
 .promo-picture {
   background-color: rgb(129, 179,210);
   background-image: url(../img/mainphoto.jpg);
-  background-position: center -50px;
+  background-position: center -56px;
   width: 1200px;
-  height: 514px;
+  height: 508px;
 }
 
 .promo-block {
   background-color: rgb(255,255,255);
-  width: 540px;
+  width: 495px;
   margin-bottom: 50px;
   margin-top: 60px;
   margin-left: auto;
@@ -112,6 +112,7 @@ body {
 }
 
 .promo-block h1 {
+  padding-bottom: 14px;
   font-size: 21px;
   line-height: 26px;
   color: rgb(0, 0, 0);
@@ -130,16 +131,14 @@ body {
 
 .picture-reason {
    display: flex;
-   flex-direction: row;
 }
 
 .picture-description {
   flex-grow: 2;
-  padding-top: 40px;
+  padding-top: 47px;
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  padding-top: 40px;
   background-color: rgb(129, 179, 210);
   font-size: 14px;
   line-height: 21px;
@@ -148,8 +147,15 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.picture-number {
+  padding-top: 21px;
+  padding-bottom: 7px;
+}
+
 .picture-header {
   display: inline-block;
+  padding: 0;
+  margin: 0;
   width: 140px;
   font-size: 21px;
   line-height: 21px;
@@ -176,10 +182,9 @@ body {
 
 .reason-list {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-  min-height: 331px;
+  padding-top: 58px;
+  padding-bottom: 78px;
 }
 
 .reason-point {
@@ -187,7 +192,10 @@ body {
   text-align: center;
 }
 
-.reason-point h2 {
+.reason-header {
+  display: block;
+  padding-top: 6px;
+  padding-bottom: 8px;
   font-size: 21px;
   line-height: 21px;
   color: rgb(0, 0, 0);
@@ -203,11 +211,10 @@ body {
 
 .picture-description-reverse {
   flex-grow: 2;
-  padding-top: 40px;
+  padding-top: 29px;
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  padding-top: 40px;
   background-color: rgb(129, 179, 210);
   font-size: 14px;
   line-height: 21px;
@@ -227,9 +234,14 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.picture-number-reverse {
+  padding-top: 6px;
+  padding-bottom: 7px;
+}
+
 .picture-text-reverse {
   display: inline-block;
-  width: 340px;
+  width: 314px;
   font-size: 14px;
   line-height: 21px;
   color: rgb(255, 255, 255);
@@ -240,10 +252,9 @@ body {
 
 .reason-list-nopicture {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-  min-height: 257px;
+  padding-top: 30px;
+  padding-bottom: 47px;
   background-color: rgb(238, 238, 238);
 }
 
@@ -252,8 +263,13 @@ body {
   text-align: center;
 }
 
-.reason-point-nopicture h2 {
+.reason-point-nopicture div {
+  padding-bottom: 7px;
+}
+
+.reason-header-nopicture {
   display: inline-block;
+  padding-bottom: 6px;
   max-width: 130px;
   text-align: center;
   font-size: 21px;
@@ -277,7 +293,7 @@ body {
    width: 500px;
 }
 
-.if-interest-content span {
+.main-question {
   font-size: 30px;
   line-height: 24px;
   color: rgb(0, 0, 0);
@@ -286,8 +302,8 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
-.if-interest-content p {
-  padding-top: 20px;
+.main-answer {
+  padding-top: 17px;
   font-size: 14px;
   line-height: 21px;
   color: rgb(51, 51, 51);
@@ -297,7 +313,7 @@ body {
 }
 
 .search-open {
-  padding-top: 40px;
+  padding-top: 35px;
 }
 
 .search-name {
@@ -329,7 +345,7 @@ body {
   background-color: rgb(255, 255, 255);
   position: absolute;
   left: 315px;
-  top: 0px;
+  top: -3px;
   box-shadow:
     1px 0px 8px lightgrey,
     -1px 0px 8px lightgrey,
@@ -340,22 +356,22 @@ body {
   text-align: left;
   font-size: 0px;
   padding-top: 56px;
-  padding-left: 54px;
+  padding-left: 57px;
   padding-right: 54px;
-  padding-bottom: 56px;
+  padding-bottom: 55px;
 }
 
 .search-first-row {
-  padding-bottom: 32px;
+  padding-bottom: 31px;
 }
 
 .search-second-row {
-  padding-bottom: 32px;
+  padding-bottom: 30px;
 }
 
 .search-third-row {
   display: inline-block;
-  padding-bottom: 56px;
+  padding-bottom: 54px;
 }
 
 .search-fourth-row {
@@ -365,10 +381,10 @@ body {
 .search-first-row input {
   padding: 0;
   margin: 0;
-  padding-left: 14px;
+  padding-left: 15px;
   width: 296px;
-  height: 38px;
-  padding-right: 38px;
+  height: 35px;
+  padding-right: 35px;
 	background: rgb(242, 242, 242);
   box-shadow: none;
   border: none;
@@ -385,11 +401,10 @@ body {
   width: 292px;
 }
 
-
 .calendar {
   position: absolute;
   display: inline-block;
-  right: 57px;
+  right: 54px;
   width: 39px;
   height: 38px;
   border: 0;
@@ -446,10 +461,10 @@ body {
 .search-second-row input {
   padding: 0;
   margin: 0;
-  padding-left: 14px;
+  padding-left: 15px;
   width: 296px;
   height: 38px;
-  padding-right: 38px;
+  padding-right: 37px;
 	background: rgb(242, 242, 242);
   box-shadow: none;
   border: none;
@@ -470,7 +485,7 @@ body {
   padding: 0;
   margin: 0;
   padding-left: 55px;
-  padding-right: 40px;
+  padding-right: 35px;
 	width: 25px;
   height: 38px;
 	background: rgb(242, 242, 242);
@@ -495,7 +510,7 @@ body {
 .search-fourth-row .plus-button {
   position: absolute;
   display: inline-block;
-  right: 56px;
+  right: 53px;
   width: 39px;
   height: 38px;
   border: 0;
@@ -565,7 +580,7 @@ body {
   padding: 0;
   margin: 0;
   padding-left: 55px;
-  padding-right: 40px;
+  padding-right: 35px;
 	width: 25px;
   height: 38px;
 	background: rgb(242, 242, 242);
@@ -574,7 +589,7 @@ body {
 }
 
 .search-first-row label {
-  padding-right: 19px;
+  padding-right: 22px;
   position: relative;
   font-size: 14px;
   line-height: 26px;
@@ -586,7 +601,7 @@ body {
 
 .search-second-row label {
   position: relative;
-  padding-right: 16px;
+  padding-right: 17px;
   font-size: 14px;
   line-height: 26px;
   color: rgb(0, 0, 0);
@@ -596,7 +611,7 @@ body {
 }
 
 .search-third-row label {
-  padding-right: 37px;
+  padding-right: 40px;
   position: relative;
   font-size: 14px;
   line-height: 26px;
@@ -607,9 +622,8 @@ body {
 }
 
 .search-fourth-row label {
-  padding-right: 20px;
-  padding-left: 48px;
-  padding-right: 20px;
+  padding-right: 26px;
+  padding-left: 51px;
   position: relative;
   font-size: 14px;
   line-height: 26px;
@@ -1217,11 +1231,7 @@ input:-ms-input-placeholder {
 /*Футер*/
 
 .footer-main {
-  min-height: 120px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  padding-top: 30px;
 }
 
 .footer-opacity {
@@ -1232,9 +1242,12 @@ input:-ms-input-placeholder {
 }
 
 .hashtag {
-  flex-basis: 220px;
+  float: left;
+  width: 300px;
   padding: 0;
   margin: 0;
+  padding-top: 18px;
+  margin-left: 133px;
   font-size: 21px;
   line-height: 26px;
   color: rgb(0, 0, 0);
@@ -1243,11 +1256,18 @@ input:-ms-input-placeholder {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.footer-social {
+  float: left;
+  width: 300px;
+  padding-top: 6px;
+  margin-left: 92px;
+}
+
 .footer-copyright {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  float: right;
+  width: 300px;
+  padding-top: 50px;
+  margin-right: 6px;
 }
 
 .html-academy {
@@ -1300,6 +1320,7 @@ input:-ms-input-placeholder {
 
 .social-btn {
   display: inline-block;
+  margin-right: 3px;
   width: 46px;
   height: 48px;
   font-size: 0;
