--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ body {
   height: 35px;
   margin: 0;
   padding: 0;
-  padding-left: 15px;
+  padding-left: 12px;
   padding-right: 35px;
 	background: rgb(242, 242, 242);
   box-shadow: none;
@@ -397,14 +397,14 @@ body {
 
 .search-first-row input:focus {
   width: 292px;
-  height: 34px;
+  height: 31px;
 	background: rgb(255, 255, 255);
   border: 2px solid rgb(235, 235, 235);
 }
 
 .calendar {
   position: absolute;
-  right: 54px;
+  right: 46px;
   display: inline-block;
   vertical-align: top;
   width: 39px;
@@ -413,6 +413,7 @@ body {
   font-size: 0;
   background-color: transparent;
   border: 0;
+  cursor: pointer;
 }
 
 .calendar::before {
@@ -465,7 +466,7 @@ body {
   height: 38px;
   margin: 0;
   padding: 0;
-  padding-left: 15px;
+  padding-left: 12px;
   padding-right: 37px;
 	background: rgb(242, 242, 242);
   box-shadow: none;
@@ -478,14 +479,14 @@ body {
 
 .search-second-row input:focus {
   width: 292px;
-  height: 34px;
+  height: 31px;
   background: rgb(255, 255, 255);
   border: 2px solid rgb(235, 235, 235);
 }
 
 .search-third-row input {
   width: 25px;
-  height: 38px;
+  height: 35px;
   margin: 0;
   padding: 0;
   padding-left: 55px;
@@ -497,7 +498,7 @@ body {
 
 .search-third-row .plus-button {
   position: absolute;
-  right: 285px;
+  right: 273px;
   display: inline-block;
   vertical-align: top;
   width: 39px;
@@ -511,7 +512,7 @@ body {
 
 .search-fourth-row .plus-button {
   position: absolute;
-  right: 53px;
+  right: 43px;
   display: inline-block;
   vertical-align: top;
   width: 39px;
@@ -523,8 +524,23 @@ body {
   cursor: pointer;
 }
 
-.minus-button {
+.search-third-row .minus-button {
   position: absolute;
+  right: 121px;
+  display: inline-block;
+  vertical-align: top;
+  width: 39px;
+  height: 38px;
+  font-size: 0;
+  text-decoration: none;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.search-fourth-row .minus-button {
+  position: absolute;
+  right: 348px;
   display: inline-block;
   vertical-align: top;
   width: 39px;
@@ -580,7 +596,7 @@ body {
 
 .search-fourth-row input {
   width: 25px;
-  height: 38px;
+  height: 35px;
   margin: 0;
   padding: 0;
   padding-left: 55px;
