--- a/css/style.css
+++ b/css/style.css
@@ -865,6 +865,32 @@ input:-ms-input-placeholder {
   background-position: -349px -10px;
 }
 
+.search-form-small-basis input[type="checkbox"]:disabled + label::before {
+  position: absolute;
+  top: 0px;
+  left: -30px;
+  display: block;
+  width: 25px;
+  height: 25px;
+  content: "";
+  background-image: url(../img/sprite.png);
+  background-repeat: no-repeat;
+  background-position: -133px -10px;
+}
+
+.search-form-small-basis input[type="checkbox"]:disabled:checked + label::after {
+  position: absolute;
+  top: 0px;
+  left: -30px;
+  display: block;
+  width: 25px;
+  height: 25px;
+  content: "";
+  background-image: url(../img/sprite.png);
+  background-repeat: no-repeat;
+  background-position: -259px -10px;
+}
+
 .filter-range {
   width: 320px;
   text-transform: uppercase;
@@ -1041,6 +1067,18 @@ input:-ms-input-placeholder {
   margin-right: 30px;
 }
 
+.sorting .sorting-active a {
+  text-decoration: none;
+  color: rgb(129, 179, 210);
+  border: none;
+}
+
+.sorting .sorting-active a:hover {
+  text-decoration: none;
+  color: rgb(129, 179, 210);
+  border: none;
+}
+
 .sorting-element a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.3);
@@ -1089,10 +1127,34 @@ input:-ms-input-placeholder {
 	border-top: 10px solid rgb(204, 204, 204);
 }
 
+.search-result-right .active-button::before {
+  position: absolute;
+  top: 39px;
+  right: 74px;
+  content: "";
+  width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 10px solid rgb(129, 179, 210);
+}
+
+.search-result-right .active-button:hover::before {
+  position: absolute;
+  top: 39px;
+  right: 74px;
+  content: "";
+  width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 10px solid rgb(129, 179, 210);
+}
+
 .down-button:hover::before {
   position: absolute;
-  top: 35px;
-  right: 78px;
+  top: 39px;
+  right: 74px;
   width: 0;
 	height: 0;
   content: "";
@@ -1103,8 +1165,8 @@ input:-ms-input-placeholder {
 
 .down-button:focus::before {
   position: absolute;
-  top: 35px;
-  right: 78px;
+  top: 39px;
+  right: 74px;
   width: 0;
   height: 0;
   content: "";
@@ -1135,8 +1197,8 @@ input:-ms-input-placeholder {
 
 .up-button:hover::before {
   position: absolute;
-  top: 35px;
-  right: 99px;
+  top: 39px;
+  right: 97px;
   width: 0;
 	height: 0;
   content: "";
@@ -1147,8 +1209,8 @@ input:-ms-input-placeholder {
 
 .up-button:focus::before {
   position: absolute;
-  top: 35px;
-  right: 99px;
+  top: 39px;
+  right: 97px;
   width: 0;
   height: 0;
   content: "";
@@ -1202,30 +1264,21 @@ input:-ms-input-placeholder {
 }
 
 .article-text {
+  width: 257px;
   padding-bottom: 13px;
 }
 
 .article-info {
+  float: left;
   display: inline-block;
+  width: 115px;
   text-align: left;
 }
 
-.article-price-amara {
+.article-price {
+  float: left;
   display: inline-block;
-  padding-left: 34px;
-  text-align: right;
-}
-
-.article-price-desert {
-  display: inline-block;
-  padding-left: 60px;
-  text-align: right;
-}
-
-.article-price-villas {
-  display: inline-block;
-  padding-left: 17px;
-  text-align: right;
+  width: 142px;
 }
 
 .more-btn {
@@ -1292,8 +1345,8 @@ input:-ms-input-placeholder {
   display: inline-block;
   vertical-align: middle;
   width: 109px;
-  height: 25px;
-  margin-top: 30px;
+  height: 23px;
+  margin-top: 35px;
   padding-top: 5px;
   font-family: "PT Sans", "DIN Pro", sans-serif;
   font-size: 14px;
@@ -1305,7 +1358,6 @@ input:-ms-input-placeholder {
 }
 
 .stars-block {
-  padding-top: 5px;
   transform: scaleX(-1);
 }
 
@@ -1313,6 +1365,7 @@ input:-ms-input-placeholder {
   display: inline-block;
   margin: 0;
   padding: 0;
+  font-size: 0;
   list-style: none;
 }
 
@@ -1320,8 +1373,9 @@ input:-ms-input-placeholder {
   display: inline-block;
   width: 20px;
   height: 25px;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  padding-right: 4px;
   text-align: right;
   background-image: url(../img/2stars.png);
   background-repeat: no-repeat;
