--- a/css/style.css
+++ b/css/style.css
@@ -149,12 +149,13 @@ body {
 }
 
 .picture-number {
-  padding-top: 21px;
+  padding-top: 24px;
   padding-bottom: 7px;
 }
 
 .picture-header {
   display: inline-block;
+  vertical-align: middle;
   width: 140px;
   padding: 0;
   padding-top: 2px;
@@ -169,6 +170,7 @@ body {
 
 .picture-text {
   display: inline-block;
+  vertical-align: middle;
   width: 300px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
@@ -236,6 +238,7 @@ body {
 
 .picture-header-reverse {
   display: inline-block;
+  vertical-align: middle;
   width: 151px;
   font-size: 21px;
   line-height: 21px;
@@ -252,6 +255,7 @@ body {
 
 .picture-text-reverse {
   display: inline-block;
+  vertical-align: middle;
   width: 314px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
@@ -300,7 +304,7 @@ body {
    width: 500px;
    margin-left: auto;
    margin-right: auto;
-   padding-top: 52px;
+   padding-top: 54px;
    text-align: center;
 }
 
@@ -314,7 +318,7 @@ body {
 }
 
 .main-answer {
-  padding-top: 17px;
+  padding-top: 16px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -334,6 +338,7 @@ body {
   min-height: 56px;
   margin: 0 auto;
   padding-top: 30px;
+  padding-bottom: 30px;
   text-align: center;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
@@ -342,6 +347,8 @@ body {
   text-transform: uppercase;
   color: rgb(255, 255, 255);
   background-color: rgb(118, 99, 87);
+  border: none;
+  cursor: pointer;
 }
 
 .search-block {
@@ -349,6 +356,7 @@ body {
   width: 100%;
   min-height: 592px;
   background-image: url(../img/map.jpg);
+  background-color: rgb(255, 255, 255);
 }
 
 .search-basis {
@@ -741,11 +749,6 @@ input:-moz-placeholder {
 }
 
 input::placeholder {
-  color: rgba(0, 0, 0, 1);
-  opacity: inherit;
-}
-
-input:placeholder {
   color: rgba(0, 0, 0, 1);
   opacity: inherit;
 }
@@ -1271,6 +1274,7 @@ input:-ms-input-placeholder {
 .article-info {
   float: left;
   display: inline-block;
+  vertical-align: middle;
   width: 115px;
   text-align: left;
 }
@@ -1278,6 +1282,7 @@ input:-ms-input-placeholder {
 .article-price {
   float: left;
   display: inline-block;
+  vertical-align: middle;
   width: 142px;
 }
 
@@ -1300,7 +1305,7 @@ input:-ms-input-placeholder {
 }
 
 .more-btn:hover {
-  color: rgba(255, 255, 255);
+  color: rgb(255, 255, 255);
   background-color: rgb(102, 158, 192);
 }
 
@@ -1363,6 +1368,7 @@ input:-ms-input-placeholder {
 
 .stars-list {
   display: inline-block;
+  vertical-align: baseline;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -1371,6 +1377,7 @@ input:-ms-input-placeholder {
 
 .stars-list li {
   display: inline-block;
+  vertical-align: baseline;
   width: 20px;
   height: 25px;
   margin: 0;
@@ -1426,6 +1433,7 @@ input:-ms-input-placeholder {
 
 .html-academy {
   display: inline-block;
+  vertical-align: middle;
   padding-right: 8px;
   padding-left: 3px;
   padding-top: 5px;
@@ -1538,8 +1546,4 @@ input:-ms-input-placeholder {
   width: 20px;
   height: 16px;
   background-position: -1159px -10px;
-}
-
-.footer-opcaity {
-  background-color: rgba(255, 255, 255, 0.9);
 }
