--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,15 @@ body {
 
 .model-content-show {
   display: none;
+  animation-name: bounce;
+  animation-duration: 2s;
+}
+
+@keyframes bounce {
+  0%   { transform: translateY(2000px); }
+  70%  { transform: translateY(30px);   }
+  90%  { transform: translateY(10px);   }
+  100% { transform: translateY(0);      }
 }
 
 .search-basis {
