--- a/css/style.css
+++ b/css/style.css
@@ -355,21 +355,45 @@ body {
   position: relative;
   width: 100%;
   min-height: 592px;
-  background-image: url(../img/map.jpg);
   background-color: rgb(255, 255, 255);
 }
 
 .model-content-show {
   display: none;
   animation-name: bounce;
-  animation-duration: 2s;
+  animation-duration: 1s;
 }
 
 @keyframes bounce {
-  0%   { transform: translateY(2000px); }
-  70%  { transform: translateY(30px);   }
-  90%  { transform: translateY(10px);   }
-  100% { transform: translateY(0);      }
+  0%   {
+    transform: translateX(2000px);
+  }
+  70%  {
+    transform: translateX(30px);
+  }
+  90%  {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.modal-error {
+  animation-name: none: shake;
+  animation-duration: 0.6s;
+}
+
+@keyframes shake {
+  0%, 100%   {
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90%  {
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80%  {
+    transform: translateX(10px);
+  }
 }
 
 .search-basis {
